--- a/cs_core/15210.md
+++ b/cs_core/15210.md
@@ -20,13 +20,13 @@ This class is an introduction to parallel algorithms and general algorithm desig
 - Read the notes! Seriously! The notes are amazingly thorough and improve with each semester. They are chock-full of examples and mini-problems to test your understanding. Best of all, if there is something you don't understand in the notes, you can always post a question related to that content thanks to the Diderot built-in features.
 - For exams, do the practice midterms. Figure out what you are bad at. Then, focus on rereading the notes for those sections.
 - As you read the notes, try to quiz yourself questions on the content. Every exam includes conceptual questions, and these can be free points for you if you study effectively. 
-- Take advantage of office hours. 210 had many TAs (as one of the bigger CS classes) and thus, a ton of office hours. Use them when your stuck.
+- Take advantage of office hours. 210 had many TAs (as one of the bigger CS classes) and thus, a ton of office hours. Use them when you are stuck.
 - Make sure to plan ahead with the homeworks. The worst thing is to wait for the last day to do the programming and get stuck with a silly bug in your code. You cannot get partial credit on programming homeworks if your code doesn't compile. Avoid procrastinating!
 
 ## What to watch out for
 
 - There's a general consensus that 210 starts off really hard (excluding the first homework). Be prepared for that. As you get more comfortable applying algorithmic techniques, the class will get easier. 
-- Yes, it does have a probability and randomization unit. It's good to be comfortable with probability/expectation basis coming into the course.
+- Yes, it does have a probability and randomization unit. It's good to be comfortable with probability/expectation coming into the course.
 
 ## Resources
 
